fixing alignment for role list

--- a/src/styles/components/skill-list-item.scss
+++ b/src/styles/components/skill-list-item.scss
@@ -30,6 +30,7 @@
     div div {
       font-size: $small-font-size;
       margin-block-start: 0.5rem;
+      text-align: left;
     }
 
     div div ul {
